# geant4-glass

./: .gitignore  CMakeLists.txt  README-hosan  README.md  glass.cc
draw/: CMakeLists.txt  beamHist.cpp  beamHistPWO.cpp  calcOpticalResolution.cpp  cherVsScint.cpp  detectors.cpp  energyResolution.cpp  energyResolutionCompare.cpp  escapeParticles.cpp  lumiUnitVolumesOutput.cpp  materials.cpp  npeVsSourcePos.cpp  resolution.cpp  scintTransDet.cpp  tof.cpp
draw/gnuplot/: energyResolution-2x2x40cm.gp  energyResolution-gauss.gp  energyResolution.gp
draw/hosan/: README  ene_edep_combine.cc  ene_edep_res.cc  ene_edep_res_test.cc
draw/include/: CanvasHelper.h  StringUtils.h  utilities.h
draw/src/: CanvasHelper.cpp  StringUtils.cpp  utilities.cpp
draw/vladimir/: test_Glass_2022_110486_result.root
include/: AbsMPPC.hh  ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  G4Utils.hh  HistoManager.hh  Materials.hh  MyConstants.hh  MyParallelWorld.hh  MyRunAction.hh  MyRunManager.hh  MyVisCommands.hh  OpticalEventAction.hh  OpticalStackingAction.hh  OpticalSteppingAction.hh  OpticalUserTrackInformation.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  R1450PMT.hh  R1828_01PMT.hh  R2059PMT.hh  R2257PMT.hh  S13360_6025CS.hh  S13360_6025CS_20.hh  S13360_6025CS_2x2.hh  S13360_6025CS_Custom.hh  WorldEscapeSteppingAction.hh
slurm/: eres-optical-uv-emission.sh  eres-optical.sh  eres.sh  example.sh  lumi-unit-volumes.sh  npe-vs-gps-pos-berd.sh  npe-vs-gps-pos-france-pwo.sh  npe-vs-gps-pos-france.sh  scint-to-cher-cube10-mppc-custom-fast.sh  scint-to-cher-cube10-mppc-custom.sh  scint-to-cher-cube10.sh  scint-to-cher-cube4.sh  scint-to-cher-cube6-fast.sh  scint-to-cher-cube6.sh  scint-to-cher-cube9-fast.sh  scint-to-cher-cube9-mppc-custom-fast.sh  scint-to-cher-cube9-mppc-custom.sh  scint-to-cher-cube9.sh  scint-to-cher.sh  temp-eres-optical-3x3.sh
src/: AbsDetector.cc  AbsMPPC.cc  AbsPMT.cc  ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  G4Utils.cc  HistoManager.cc  Materials.cc  MyParallelWorld.cc  MyRunAction.cc  MyRunManager.cc  MyVisCommands.cc  OpticalEventAction.cc  OpticalStackingAction.cc  OpticalSteppingAction.cc  OpticalUserTrackInformation.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  R1450PMT.cc  R1828_01PMT.cc  R2059PMT.cc  R2257PMT.cc  S13360_6025CS.cc  S13360_6025CS_20.cc  S13360_6025CS_2x2.cc  S13360_6025CS_Custom.cc  WorldEscapeSteppingAction.cc
